api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: swaggerapi/petstore
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
