ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: swaggerapi/swagger-ui
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
