ui-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ui
  type: NodePort
